[package]
name = "mlockdir"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]

[dependencies]
ahash = "0.8.9"
compact_str = "0.7.1"
cstr = "0.2.11"
humansize = "2.1.3"
libc = "0.2.153"
pretty-error-debug = "0.3.0"
rustix = { version = "0.38.31", features = ["event", "fs", "mm", "param", "process", "stdio", "termios"] }
scopeguard = "1.2.0"
thiserror = "1.0.57"
